--- a/ten_deys_jam/ten_deys_jam.vcxproj.filters
+++ b/ten_deys_jam/ten_deys_jam.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="egudai_CSV.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Input.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Map.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Sprite-0001.png">
+    <Image Include="Resources\Sprite-0001.png">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+    <Image Include="Resources\Sprite-0002.png">
       <Filter>リソース ファイル</Filter>
     </Image>
   </ItemGroup>
@@ -31,9 +43,18 @@
     <ClInclude Include="egudai_CSV.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Input.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Map.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="test.csv">
+    <None Include="Resources\alphamap.csv">
       <Filter>リソース ファイル</Filter>
     </None>
   </ItemGroup>
