--- a/ten_deys_jam/ten_deys_jam.vcxproj.filters
+++ b/ten_deys_jam/ten_deys_jam.vcxproj.filters
@@ -33,12 +33,21 @@
     <ClCompile Include="TurnEffect.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="CurveEffect.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="CurvePoint.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resources\Sprite-0001.png">
       <Filter>リソース ファイル</Filter>
     </Image>
     <Image Include="Resources\Sprite-0002.png">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+    <Image Include="Resources\turnEffect.png">
       <Filter>リソース ファイル</Filter>
     </Image>
   </ItemGroup>
@@ -56,6 +65,12 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="TurnEffect.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="CurveEffect.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="CurvePoint.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
